--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                  
                 <div class="pj-info">
                 <h3>Random-Meme-Sounds</h3>
-                <p>There's not an elaborated explanation, just a goofy webpage with goofy sounds for googy people.</p>
+                <p>There's not an elaborated explanation, just a goofy webpage with goofy sounds for goofy people.</p>
                </div>              
             </div>
               
